--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
 
   cupertino_icons: ^0.1.3
   outline_material_icons: ^0.1.1
+  provider: ^4.3.1
+  expressions: ^0.1.5
+  auto_size_text_field: ^0.1.5
 
 dev_dependencies:
   flutter_test:
